read buy shop and order config

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,10 @@ version: '${version}'
 main: top.mrxiaom.sweet.adaptiveshop.SweetAdaptiveShop
 api-version: 1.13
 depend: [ Vault ]
-softdepend: [ PlaceholderAPI ]
+softdepend:
+  - PlaceholderAPI
+  - MythicLib
+  - MythicMobs
 authors: [ MrXiaoM ]
 commands:
   sweetadptiveshop:
