--- a/src/main/resources/gui/buy.yml
+++ b/src/main/resources/gui/buy.yml
@@ -4,6 +4,9 @@ inventory:
   - '框　物物物物物　框'
   - '框框框框框框框框框'
   - '框框框框原副订刷框'
+# 是否在提交物品后关闭界面
+# 关闭此项，则提交物品后刷新界面
+close-after-submit: true
 main-icons:
   物:
     material: PAPER
