add frame to default config

--- a/src/main/resources/gui/buy.yml
+++ b/src/main/resources/gui/buy.yml
@@ -44,6 +44,9 @@ main-icons:
       available: '&a左键&7 | &f刷新当前分类的商店物品'
       unavailable: '&c&m左键&7 | &f可用刷新券不足'
 other-icons:
+  框:
+    material: WHITE_STAINED_GLASS_PANE
+    display: '&f '
   原:
     material: PAPER
     custom-model-data: 10000
