--- a/src/main/resources/gui/order.yml
+++ b/src/main/resources/gui/order.yml
@@ -27,6 +27,9 @@ main-icons:
       available: '&a左键&7 | &f刷新当前订单列表'
       unavailable: '&c&m左键&7 | &f可用刷新券不足'
 other-icons:
+  框:
+    material: WHITE_STAINED_GLASS_PANE
+    display: '&f '
   原:
     material: PAPER
     custom-model-data: 10000
