--- a/src/main/resources/gui/order.yml
+++ b/src/main/resources/gui/order.yml
@@ -1,9 +1,9 @@
-title: '收购商店'
+title: '收购订单'
 inventory:
   - '框框框框框框框框框'
   - '框　　订订订　　框'
   - '框框框框框框框框框'
-  - '框框框框原副订刷框'
+  - '框框框框原副单刷框'
 # 是否在提交订单后关闭界面
 # 关闭此项，则提交订单后刷新界面
 close-after-submit: true
@@ -35,16 +35,16 @@ other-icons:
     custom-model-data: 10000
     display: '&e杂物收购'
     left-click-commands:
-      - '[console]sweetadptiveshop open buy default %player_name%'
+      - '[console]sashop open buy default %player_name%'
   副:
     material: PAPER
     custom-model-data: 10000
     display: '&e副本收购'
     left-click-commands:
-      - '[console]sweetadptiveshop open buy rpg %player_name%'
-  订:
+      - '[console]sashop open buy rpg %player_name%'
+  单:
     material: PAPER
     custom-model-data: 10000
     display: '&e收购订单'
     left-click-commands:
-      - '[console]sweetadptiveshop open order %player_name%'
+      - '[console]sashop open order %player_name%'
