--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,7 @@ softdepend:
   - PlaceholderAPI
   - MythicLib
   - MythicMobs
+  - ItemsAdder
 authors: [ MrXiaoM ]
 commands:
   sweetadaptiveshop:
