--- a/src/main/resources/buy/wheat.yml
+++ b/src/main/resources/buy/wheat.yml
@@ -5,6 +5,8 @@ group: default
 # mythic 为MythicMobs物品，使用参数 mythic
 # itemsadder 为ItemsAdder物品，使用参数 itemsadder
 type: vanilla
+# 旧版本可使用 '物品ID:子ID' 格式，如 'WOOL:3'
+# 在旧版本，不输入冒号添加子ID，则代表这一物品ID下任意子ID的物品都可以匹配
 material: WHEAT
 # mythic: ExampleItem
 # itemsadder: '_iainternal:icon_arrow_chest'
