--- a/src/main/resources/buy/wheat.yml
+++ b/src/main/resources/buy/wheat.yml
@@ -30,6 +30,7 @@ price:
       large-than: 100
       # 价格缩放公式，此处 value 为动态值变量减去 large-than 的值
       # 此处为动态值大于 100 后，基础缩放为 100%，每增加1点动态值，缩放减少 1%
+      # 文档：https://github.com/ezylang/EvalEx/tree/2.x?tab=readme-ov-file#supported-functions
       scale-formula: '1 - value / 100'
     when-has-permission:
       # 当拥有某权限时
@@ -60,7 +61,10 @@ dynamic-value:
   # 具体指定的时间请见 config.yml
   routine: weekly
   # 显示该数值的公式，value 为动态值变量
+  # 文档：https://github.com/ezylang/EvalEx/tree/2.x?tab=readme-ov-file#supported-functions
   display-formula: value
+  # 动态值变量显示格式
+  display-format: '#.00'
   # 动态值大于多少时，%dynamic_placeholder% 显示的内容
   # 配置中越大越先显示
   placeholders:
