--- a/src/main/resources/gui/custom/example.yml
+++ b/src/main/resources/gui/custom/example.yml
@@ -18,7 +18,7 @@ default-icons:
     lore:
       - description
       - ''
-      - '  &f价格: &e%price%金币'
+      - '  &f价格: &e%price%'
       - '  &f动态: &e%dynamic%'
       - '  &f趋势: &e%dynamic_placeholder%'
       - '  &f限购: &e%limitation%'
@@ -28,15 +28,15 @@ default-icons:
     lore-bypass:
       - description
       - ''
-      - '  &f价格: &e%price%金币'
+      - '  &f价格: &e%price%'
       - '  &f限购: &e%limitation%'
       - ''
       - footer
       - operation
     operations:
-      one: '&a左键&7 | &f提交1个物品 &7(获得%price%金币)'
-      stack: '&b右键&7 | &f提交一组物品 &7(%count%个，获得%price%金币)'
-      all: '&eShift+左键&7 | &f提交全部物品 &7(%count%个，获得%price%金币)'
+      one: '&a左键&7 | &f提交1个物品 &7(获得%price%)'
+      stack: '&b右键&7 | &f提交一组物品 &7(%count%个，获得%price%)'
+      all: '&eShift+左键&7 | &f提交全部物品 &7(%count%个，获得%price%)'
 # 主要图标（即商品图标）列表
 # 此处的商品将会保持展示，不管玩家有没有相应商品/订单的权限
 main-icons:
